--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
   background-size: 125%;
   background-position: 100% center;
   transition: background 0.5s;
+  animation-direction: alternate;
   overflow: hidden;
   animation: moveBackground 60s linear infinite;
 }
@@ -338,132 +339,4 @@ body {
 .UVIndexChart {
   width: 100%;
   height: 40%;
-}
-
-@media (max-width: 1200px) {
-  .sidebar {
-    width: 20vw;
-  }
-
-  .download {
-    width: 100%;
-  }
-
-  .recently-searched-card {
-    width: 95%;
-  }
-
-  .forecast {
-    flex-direction: column;
-    position: relative;
-    bottom: auto;
-    left: auto;
-    right: auto;
-  }
-
-  .temperature {
-    font-size: 9vw;
-  }
-
-  .condition {
-    font-size: 3rem;
-  }
-}
-
-@media (max-width: 900px) {
-  body {
-    font-size: medium;
-  }
-
-  .temperature {
-    font-size: 13vw;
-  }
-
-  .high-temp,
-  .low-temp {
-    font-size: 0.9rem;
-  }
-
-  .temp-range-card {
-    width: 70%;
-  }
-
-  .main-content {
-    padding: 1rem;
-  }
-
-  .recently-searched-container {
-    top: 10%;
-    right: 1%;
-  }
-
-  .condition {
-    font-size: 2.5rem;
-  }
-}
-
-@media (max-width: 600px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-  }
-
-  .main-content {
-    padding: 1rem;
-  }
-
-  .header {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .search-input {
-    margin-bottom: 1rem;
-  }
-
-  .forecast {
-    flex-direction: column;
-  }
-
-  .day {
-    padding: 0.5rem;
-  }
-
-  .temperature {
-    font-size: 18vw;
-  }
-
-  .condition {
-    font-size: 2rem;
-  }
-
-  .download {
-    width: 100%;
-  }
-}
-
-@media (max-width: 400px) {
-  body {
-    font-size: small;
-  }
-
-  .sidebar {
-    height: auto; /* Change height to auto */
-  }
-
-  .temperature {
-    font-size: 22vw;
-  }
-
-  .condition {
-    font-size: 1.8rem;
-  }
-
-  .temp-range-card {
-    width: 90%;
-  }
-
-  .download {
-    padding: 0.6rem 1rem;
-  }
 }
